--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Employee Management</title>
   <script src="./src/polyfills.js"></script>
   <script src="../node_modules/process/browser.js"></script>
